@@ -60,7 +60,7 @@ public class CategoryServiceImpl  implements ICategoryService {
         Set<CategoryResponse> set = new HashSet<>();
         List<ProductResponse> productResponses = productRepository.findByStoreId(storeId).stream()
                 .map(ResponseConverter::convertToProductResponse)
-                .collect(Collectors.toList());
+                .toList();
         for(ProductResponse item : productResponses){
             set.add(item.getCategory());
         }
@@ -88,12 +88,16 @@ public class CategoryServiceImpl  implements ICategoryService {
 
     @Override
     public ResponseEntity<APIRespone> updateCategory(Long id, CategoryRequest categoryRequest) {
+        System.out.println(categoryRequest.getCategoryName());
+        System.out.println(categoryRequest.getDescription());
+        System.out.println(categoryRequest.getImage());
+
          if (categoryRepository.findById(id).isEmpty()) {
              return ResponseEntity.badRequest().body(new APIRespone(false, "Category not found", ""));
          }
-         if (categoryRepository.existsByCategoryName(categoryRequest.getCategoryName())) {
-             return ResponseEntity.badRequest().body(new APIRespone(false, "Category already exists", ""));
-         }
+//         if (categoryRepository.existsByCategoryName(categoryRequest.getCategoryName())) {
+//             return ResponseEntity.badRequest().body(new APIRespone(, "Category already exists", ""));
+//         }
         Category category = categoryRepository.findById(id).get();
         category.setCategoryName(categoryRequest.getCategoryName());
         try {
